updating site on 2022年 5月11日 星期三 19时03分20秒 CST

--- a/content/cn/posts/2022-05-06-a-new-post.md
+++ b/content/cn/posts/2022-05-06-a-new-post.md
@@ -42,7 +42,7 @@ draft: false
 
 和这门课的小插曲就是第二周课程组织我们在[新南威尔士艺术博物馆](https://www.artgallery.nsw.gov.au/)进行参观，似乎是参观了一些毕加索真迹，我实在回忆不起来。当时正好有一个台湾这边的展，看了核舟，大概学生价花了16D这样，怎么说呢，如果art这门课讲的是这些，我也许就不会退课了。从新南威尔士艺术博物馆回来的时候，因为又又又又迷路了，接受了一个native男人的指路，但是他带着我越走越偏，我当时就怕了，就直接说，我找到我要去哪里了，然后他似乎还挽留了一下，但是我直接跑了。现在想起来还是有点吓人的，对native的这点信任差点害死我。
 
-{{<figure src = "/image/Ticket.jpge" title="The ticket at NSW Art Gallery" width="450">}}
+{{<figure src = "/image/Ticket.jpge">}}
 
 在上Introduction to Media studies时，是因为感觉我自己关于传播学的很多基础概念一直没有build起来，就想用这个课build起来。这两天翻了当时的笔记和slide show，觉得澳洲这边的media studies虽说是mix范式的，但是还是会侧重文化研究的传统，讲的很多都是话语、叙事等东西，没有太多信息论那套。也可以理解，毕竟那套也没什么好讲的，总不能直接讲论文吧。当时准备第一篇essay的时候，我是比较自以为是的，第一篇essay主题是两套传播论，我当时觉得，这么简单的东西我随便写写你难道不给我HD（澳洲评价系统中的A+）吗，于是我大概是胡扯了一篇，然后得到的TA的comment是"Where is Carey?"，然后拿了一个C（痛苦.jpg）。容易自以为是是我很大的问题，也是现在万事万物都要警告自己脚踏实地的原因。第二篇essay开始认真对待，印象中是关于interpretation的，当时我essay整个是基于中国字幕组的interpretation来做的，举的例子是当时正在看的*Silicon Valley*，有一季中间字幕组把nerd、geek之类的词翻译成了中国人很好理解的*技术宅、书呆子*等，写完这篇，得到了比较好的评价，是一个HD，但是没有那么好，因为我是期待能有一个exemplar（范文）的。当时我决定如果有第三次essay我就要搞个exemplar，但是没有了。后来期末考试的时候，这门课是闭卷考试，我花了很长时间背诵概念，当时在图书馆发现了很多工具书，偏向概念类的，拿过来背诵准备了，很多忘记了名字，但是对我早期的传播学学习是很有帮助的。最后这门课我拿了一个D（澳洲评价系统中的A）。
 
@@ -74,7 +74,7 @@ draft: false
 
 Easter假期和其他来自复旦的交换生一起去了墨尔本，在墨尔本看了墨大、参观了Eureka Skydeck。一起住的airbnb。但是在墨尔本旅游我其实是有些愧疚的，因为中期计算了一下我在悉尼花的钱，由于我没有节制地外食、不做饭，我其实的花费已经远远超出了当初自己给自己设定的limit，虽然妈妈给我的现钞仍然是足够的，但是我还是觉得挺过意不去。在墨尔本的时间，天气一直很差，一直在下雨，其实非常影响心情。此外，加上墨尔本时期我独处的时间被压缩到0，我的心情开始不耐烦，最后从墨尔本回到悉尼的时候我甚至松了口气。
 
-{{<figure src = "/image/March.jpg" title="LGBT March in Sydney" width="450">}}
+{{<figure src = "/image/March.jpg">}}
 
 ## 悉尼的block回忆
 
