updating site on 2022年 5月11日 星期三 19时14分12秒 CST

--- a/content/cn/posts/2022-05-06-a-new-post.md
+++ b/content/cn/posts/2022-05-06-a-new-post.md
@@ -20,9 +20,7 @@ draft: false
 
 最后决定了从郑州那边出发去悉尼。2019年2月15日从郑州飞香港，然后在香港转机悉尼。
 
-```java
-写作这篇博客的时候恰好是在2022年5月，由于五个一政策、新冠疫情、航班熔断等的影响，这两天也恰好在看去美国的机票，发现价格之高已经远远不是2019年那时的水平。2019年2月郑州去悉尼的全程票，价格仅为￥2603；2019年6月从悉尼回上海的全程票，价格也仅为￥2545。从而深刻地感受到属于我们的黄金时代正在远去。
-```
+> 写作这篇博客的时候恰好是在2022年5月，这两天也恰好在看去美国的机票，由于五个一政策、新冠疫情、航班熔断等的影响，发现价格之高已经远远不是2019年那时的水平。2019年2月郑州去悉尼的全程票，价格仅为￥2603；2019年6月从悉尼回上海的全程票，价格也仅为￥2545。从而深刻地感受到属于我们的黄金时代正在远去。
 
 取道香港的时候，中间有四个小时的转机时间。我想着在香港还是要用网络的，所以提前在飞猪购买了香港的流量包，在香港趁着没有税买了1根MAC的口红、1根睫毛膏，忘记了睫毛膏的牌子。转机到了悉尼之后，在Kingsfordsmith机场直接有可以购买手机卡的地方，为了方便用了Optus的手机卡，因为他们有$30/28天的套餐。身边也有同学用了Vodafone和Telstra，我没有了解，但是有看到[一些网上的测评](https://www.extrabux.com/chs/guide/4277953)。
 
@@ -42,7 +40,7 @@ draft: false
 
 和这门课的小插曲就是第二周课程组织我们在[新南威尔士艺术博物馆](https://www.artgallery.nsw.gov.au/)进行参观，似乎是参观了一些毕加索真迹，我实在回忆不起来。当时正好有一个台湾这边的展，看了核舟，大概学生价花了16D这样，怎么说呢，如果art这门课讲的是这些，我也许就不会退课了。从新南威尔士艺术博物馆回来的时候，因为又又又又迷路了，接受了一个native男人的指路，但是他带着我越走越偏，我当时就怕了，就直接说，我找到我要去哪里了，然后他似乎还挽留了一下，但是我直接跑了。现在想起来还是有点吓人的，对native的这点信任差点害死我。
 
-{{<figure src = "/image/Ticket.jpge">}}
+{{<figure src = "/image/Ticket.jpg">}}
 
 在上Introduction to Media studies时，是因为感觉我自己关于传播学的很多基础概念一直没有build起来，就想用这个课build起来。这两天翻了当时的笔记和slide show，觉得澳洲这边的media studies虽说是mix范式的，但是还是会侧重文化研究的传统，讲的很多都是话语、叙事等东西，没有太多信息论那套。也可以理解，毕竟那套也没什么好讲的，总不能直接讲论文吧。当时准备第一篇essay的时候，我是比较自以为是的，第一篇essay主题是两套传播论，我当时觉得，这么简单的东西我随便写写你难道不给我HD（澳洲评价系统中的A+）吗，于是我大概是胡扯了一篇，然后得到的TA的comment是"Where is Carey?"，然后拿了一个C（痛苦.jpg）。容易自以为是是我很大的问题，也是现在万事万物都要警告自己脚踏实地的原因。第二篇essay开始认真对待，印象中是关于interpretation的，当时我essay整个是基于中国字幕组的interpretation来做的，举的例子是当时正在看的*Silicon Valley*，有一季中间字幕组把nerd、geek之类的词翻译成了中国人很好理解的*技术宅、书呆子*等，写完这篇，得到了比较好的评价，是一个HD，但是没有那么好，因为我是期待能有一个exemplar（范文）的。当时我决定如果有第三次essay我就要搞个exemplar，但是没有了。后来期末考试的时候，这门课是闭卷考试，我花了很长时间背诵概念，当时在图书馆发现了很多工具书，偏向概念类的，拿过来背诵准备了，很多忘记了名字，但是对我早期的传播学学习是很有帮助的。最后这门课我拿了一个D（澳洲评价系统中的A）。
 
