updating site on 2022年 5月12日 星期四 10时26分31秒 CST

--- a/content/cn/posts/2022-05-11-post.md
+++ b/content/cn/posts/2022-05-11-post.md
@@ -36,7 +36,7 @@ sudo xcodebuild -license
 
 然后就可以用git了。
 
-
+5. 为了正确地使用博客中的comment功能，需要提前安装utteranc.es，可以根据[这份指南](https://mscipio.github.io/post/utterances-comment-engine/)来做，只需要坐到第三步即可。在原本的partial—>footer文件中已有需要的script。
 
 ## 在搭建和更新中需要注意
 
