fixing slug and static folder structure

--- a/content/cn/posts/2022-05-06-sydneyt.md
+++ b/content/cn/posts/2022-05-06-sydneyt.md
@@ -1,7 +1,8 @@
 ---
 title: "记录2019年春季在悉尼交换的时光"
 date: 2022-05-06T13:50:21+08:00
-type : list-single
+author: "张晶"
+slug: sydney
 draft: false
 toc: true
 ---
