updating site on 2022年 5月13日 星期五 13时11分49秒 CST

--- a/content/cn/posts/2022-05-06-sydneyt.md
+++ b/content/cn/posts/2022-05-06-sydneyt.md
@@ -11,7 +11,7 @@ toc: true
 如果你不想你的名字出现在这个页面上，请联系我，我会立即删除！
 {{< end >}}
 
-2018年夏季的时候，[复旦大学每年例行发布了下一学年交流项目](https://ogp.fudan.edu.cn/60/69/c15884a417897/page.psp)，新闻学院当时分到的2019年上半年的交换项目覆盖欧洲大陆地区、英国、澳洲。当时我的判断是英国的项目一定是竞争比较激烈的，而学院当时的政策是以第一志愿申请优先，于是我直接填写了悉尼大学，避免英国那边的竞争。2018年5月31日下午， 在准备期末的乒乓球体育考试的间隙收到了微信的一百多条邮件与被2019年校级春季交流项目录取的通知。
+2018年夏季的时候，[复旦大学每年例行发布了下一学年交流项目](https://ogp.fudan.edu.cn/60/69/c15884a417897/page.psp)，新闻学院当时分到的2019年上半年的交换项目覆盖欧洲大陆地区、英国、澳洲。当时我的判断是英国的项目一定是竞争比较激烈的，而学院当时的政策是以第一志愿申请优先，于是我直接填写了悉尼大学，避免英国那边的竞争。2018年5月31日下午， 在准备期末的乒乓球体育考试的间隙收到了微信的一百多条微信与被2019年校级春季交流项目录取的邮件。
 
 翻了一下当时的邮件，辅导员的邮件是这样写的：
 
